--- a/Jynxzzz_reproduce/jynxzzz_reproduce_makemore.ipynb
+++ b/Jynxzzz_reproduce/jynxzzz_reproduce_makemore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
        "str"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
        "list"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1094,7 +1094,7 @@
        " ...]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1105,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1114,7 @@
        "32033"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1125,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1199,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1207,7 +1207,7 @@
      "output_type": "stream",
      "text": [
       "emma mma\n",
-      "<zip object at 0x7fb3a5e60dc0>\n",
+      "<zip object at 0x7fa3ae6bc7c0>\n",
       "e m\n",
       "m m\n",
       "m a\n"
@@ -1216,64 +1216,21 @@
    ],
    "source": [
     "for c in words[:1]:\n",
-    "    print(c, c[1:])\n",
-    "    # print(type(c), type(c[1:]))\n",
-    "    print(zip(c, c[1:]))\n",
+    "    # print(c, c[1:])\n",
+    "    # # print(type(c), type(c[1:]))\n",
+    "    # print(zip(c, c[1:]))\n",
+    "    # for ch1 in zip(c, c[1:]):\n",
+    "    #     print(ch1)\n",
+    "    # why we need to add start and ending?\n",
     "    for ch1, ch2 in zip(c, c[1:]):\n",
     "        print(ch1, ch2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on class zip in module builtins:\n",
-      "\n",
-      "class zip(object)\n",
-      " |  zip(*iterables, strict=False) --> Yield tuples until an input is exhausted.\n",
-      " |  \n",
-      " |     >>> list(zip('abcdefg', range(3), range(4)))\n",
-      " |     [('a', 0, 0), ('b', 1, 1), ('c', 2, 2)]\n",
-      " |  \n",
-      " |  The zip object yields n-length tuples, where n is the number of iterables\n",
-      " |  passed as positional arguments to zip().  The i-th element in every tuple\n",
-      " |  comes from the i-th iterable argument to zip().  This continues until the\n",
-      " |  shortest argument is exhausted.\n",
-      " |  \n",
-      " |  If strict is true and one of the arguments is exhausted before the others,\n",
-      " |  raise a ValueError.\n",
-      " |  \n",
-      " |  Methods defined here:\n",
-      " |  \n",
-      " |  __getattribute__(self, name, /)\n",
-      " |      Return getattr(self, name).\n",
-      " |  \n",
-      " |  __iter__(self, /)\n",
-      " |      Implement iter(self).\n",
-      " |  \n",
-      " |  __next__(self, /)\n",
-      " |      Implement next(self).\n",
-      " |  \n",
-      " |  __reduce__(...)\n",
-      " |      Return state information for pickling.\n",
-      " |  \n",
-      " |  __setstate__(...)\n",
-      " |      Set state information for unpickling.\n",
-      " |  \n",
-      " |  ----------------------------------------------------------------------\n",
-      " |  Static methods defined here:\n",
-      " |  \n",
-      " |  __new__(*args, **kwargs) from builtins.type\n",
-      " |      Create and return a new object.  See help(type) for accurate signature.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
